--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4998,11 +4998,13 @@ strong_monarch:0 "Strong Monarch"
 ww1_romania.18.d:0 "With the king losing faith in the current government, the current Prime Minister has been forced to resign. With the Prime Minister spot vacant, the king will now have to form a new government. The king has several different options available, and must pick the best one. Who shall be appointed to form the next government?"
 ww1_romania.18.a:0 "The PCD will lead a stable government!"
 ww1_romania.18.b:0 "The Liberals should be given another chance"
-ww1_romania.18.c:0 "Lets go with the agrarianists in the PC"
-ww1_romania.18.e:0 "Barbu shouldn't rock the boat too much"
+ww1_romania.77.c:0 "Lets go with the agrarianists in the PC"
+ww1_romania.77.e:0 "Barbu shouldn't rock the boat too much"
+ww1_romania.77.a:0 "On second thought, lets review our previous options"
 ROM_south_wall.tt:0 "Add §G1§! §YLand Fort§! on every tile bordering [BUL.GetFlag] §YBulgaria§!"
 ROM_strat_forts.tt:0 "Add §G3§! §YLand Fort§! on the cities of §YCaracal§!, §YAlexandria§!, §YCalarasi§!, and §YConstanta§!"
 ROM_restore_civilian_control:0 "Hold New Snap Elections"
+ww1_romania.18.c:0 "Lets appoint someone from the PC"
 ww1_romania.20.t:0 "The Left Boycotts Election for Bucharest Council"
 ww1_romania.20.d:0 "As a way to protest the new conservative government, the PNL and some in the PCD have decided they will be boycotting the elections for Bucharest Council. By showing low turnout will end up being, they hope to prove that the people do not actually support the conservatives. They're free to do this, as it will just ensure we win the election. The conservatives are divided however, in many different factions. While the king appointed Carps faction of the conservatives in power as Prime Minister, the people will have to pick which conservative faction wins this one.\n\nOne of the canidates aligns with Carps more elitist, authoritarian group of conservatives. They believe vast reforms arn't needed for Romania, and that parliament has been given much more power then it really should have. The other canidate comes from the anti Carp faction of the conservatives. Generally younger, and more centrist, they believe Carp holds a threat to Romanian democracy and want greater reforms to Romanias economy."
 ww1_romania.20.a:0 "The pro Carp faction wins!"
@@ -5010,7 +5012,10 @@ ww1_romania.20.b:0 "The 'Romanian Young-Turks' win!"
 ww1_romania.18.t:0 "King Appoints New Government"
 ROM_conservative_government:0 "The government is lead by the §cPC§! "
 ww1_romania.17.t:0 "PC Majority Elected!"
+ROM_pc_avail:0 "§cPC§! exclusive §YDomestic Focuses§! will become §Gavailable§!"
 ww1_romania.17.d:0 "The recently announced Romanian elections have came to an end. With the votes being counted up, the PC has been announced the winner of the elections, securing a quite large electoral landslide. With this, we will finally have the mandate to pass out agenda. The Romanian people still expect reforms to continue, so we must be careful in our leadership. Failing to govern properly could lead to King Carol outright dismissing us!"
+ww1_romania.77.t:0 "Which PC Faction Should We Appoint?"
+ww1_romania.77.d:0 ""
 ww1_romania.17.a:0 "Finally! Let's get to governing"
 ww1_romania.16.t:0 "PC Accuses us of Corruption!"
 ww1_romania.16.d:0 "Members of the PC have been intensifying their attacks on us as of lately, this time accusing us of favortism in the cabinet. They claim the PNL government has been giving unqualified members cabinet positions just for their loyalty, instead of their merit. These are mostly baseless, but they're hurting our support amongst the population. King Carol has also expressed his concern about the issue privately with Bratianu, stating their may be some truth in it and that the PNL needs to reform itself. "
@@ -5180,7 +5185,7 @@ kings_gov.tt:0 "This focus will be §Yautocompleted§! if King Carol appoints th
 kings_gov2.tt:0 "This focus will be §Yautocompleted§! if the King appoints §YTitu Maiorescu§! of the §cPC§! to form a government"
 kings_gov3.tt:0 "This focus will be §Yautocompleted§! if the King appoints §YBarbu Delavrancea§! of the §cPC§! to form a government"
 kings_gov4.tt:0 "This focus will be §Yautocompleted§! if the King appoints §YConstantin Arion§! of the §cPC§! to form a government"
-ww1_romania.18.f:0 "We need someone with a lot of intelligence, let's appoint Arion"
+ww1_romania.77.f:0 "We need someone with a lot of intelligence, let's appoint Arion"
 ROM_a_moral_romania:0 "Revive Trust in the Government"
 ROM_a_man_from_junimea:0 "A Man From Junimea"
 ROM_a_man_from_junimea_desc:0 ""
