--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4994,6 +4994,10 @@
 
 #####romania
 #events
+ww1_romania.78.t:0 "The 'Swamp' Demand Protection"
+ww1_romania.78.d:0 "The so-called swamp of Romanian politics, consisting of unelected appointed government positions, often in which jobs are given to friends and family, are opposing our governments campaign to help reduce corruption in government. Those in the PNL in particular are demanding protection from these efforts, and are threatening to oppose our government if we don't"
+ww1_romania.78.a:0 "We can make some exceptions"
+ww1_romania.78.b:0 "Who do they think they are?"
 strong_monarch:0 "Strong Monarch"
 ww1_romania.18.d:0 "With the king losing faith in the current government, the current Prime Minister has been forced to resign. With the Prime Minister spot vacant, the king will now have to form a new government. The king has several different options available, and must pick the best one. Who shall be appointed to form the next government?"
 ww1_romania.18.a:0 "The PCD will lead a stable government!"
@@ -5731,6 +5735,8 @@ ROM_efi:0 "Modify §YRomanian Economy§! by\n£construction_speed_texticon Const
 ROM_mil_speed_1:0 "Modify §YRomanian Economy§! by\n§YMilitary Factory§! construction speed: §G+10.00%§!"
 ROM_mil_speed_2:0 "Modify §YRomanian Economy§! by\n§YMilitary Factory§! construction speed: §G+15.00%§!\nStability: §R-10.00%§!"
 ROM_mifocus:0 "Modify §YRomanian Economy§! by\nStability: §G+5.00%§!\nProduction Efficiency growth: §G+5.00%§!"
+ROM_m2ifocus:0 "Modify §YRomanian Economy§! by\nFactory Output: §G+5.00%§!\nProduction Efficiency growth: §G+5.00%§!"
+
 ROM_ift.tt:0 "Modify §YRomanian Economy§! by\n£factory_output_texticon Factory Output: §G+5.00%§!\n£political_power_cost_texticon Daily Political Power Cost: §R+0.05§!"
 ROM_txp.tt:0 "Modify §YRomanian Economy§! by\n£political_power_cost_texticon Daily Political Power Cost: §R+0.15§!\nConsumer Goods Factories factor: §Y-10.0%§!\nStability: §G+5.00%§!"
 ROM_ice.tt:0 "Modify §YRomanian Economy§! by\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-5.0%§!"
