from my play test

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5700,6 +5700,9 @@ ww1_romania.69.t:0 "Results of Snap Elections"
 ww1_romania.69.d:0 "Riding a relative wave of stability and economic growth, Romanias incumbent party has managed to expand its majority in Romanias parliament, at the expense of the PC which has increasingly became an isolated political party. With this new mandate, we can continue our domestic agenda."
 ww1_romania.6.a:0 "Great!"
 ROM_rthc:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §G+10.00%§!\n"
+ROM_edit_div:0 "§GEnables§! §YEditing§! and §YCreation§! of §YDivision Templates§!"
+
+
 ROM_carol2:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §R-1.00%§!"
 ROM_speed:0 "Modify §YRomanian Army§! by\n£attacker_speed_texticon Division Speed: §G+5.00%§!\n\n"
 ROM_eoc:0 "Modify §YRomanian Army§! by\n£attacker_speed_texticon Division Speed: §G+5.00%§!\n£organization_texticon Division Organization: §G+7.50%§!"
@@ -5728,7 +5731,11 @@ ROM_prah_f.tt:0 "Modify §YRomanian Economy§! by\n£factory_output_texticon Max
 ROM_prah_f2.tt:0 "Modify §YRomanian Economy§! by\n£factory_output_texticon Max Factories in a State: §G+10.00%§!"
 ROM_prah_f3.tt:0 "Modify §YRomanian Economy§! by\n£factory_output_texticon Max Factories in a State: §G+5.00%§!"
 ROM_revitalization_of_the_north:0 "Economic Revitalization of the North"
-ROM_cte.tt:0 "Modify §YRomanian Economy§! by\n£construction_speed_texticon Construction Speed: §G+5.00%§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y+10.0%§!"
+
+
+ROM_cte.tt:0 "Modify §YRomanian Economy§! by\n£construction_speed_texticon Construction Speed: §G+5.00%§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y+10.0%§!\nStability: §G+5.00%§!"
+
+
 ROM_otb.tt:0 "Modify §YRomanian Economy§! by\n£consumer_goods_texticon Consumer Goods Factories factor: §Y-10.0%§!"
 ROM_mafa:0 "Modify §YRomanian Economy§! by\n£construction_speed_texticon Construction Speed: §G+5.00%§!\n£consumer_goods_texticon Consumer Goods Factories factor: §Y+5.0%§!"
 ROM_efi:0 "Modify §YRomanian Economy§! by\n£construction_speed_texticon Construction Speed: §G+5.00%§!"
