--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -187,7 +187,7 @@
  SWI_DEF:0 "Switzerland"
  SWI_ADJ:0 "Swiss"
  TUR:0 "Ottoman Empire"
- TUR_DEF:0 "the Ottoman Empire"
+ TUR_DEF:0 "the Sublime Ottoman State"
  TUR_ADJ:0 "Ottoman"
  TUR_communism:0 "Ottoman Socialist State"
  TUR_communism_DEF:0 "the Ottoman Socialist State"
@@ -550,6 +550,7 @@
  PRU_democratic:0 "Republic of Peru"
  PRU_democratic_DEF:0 "the Republic of Peru"
  PRU_neutrality_DEF:0 "the Republic of Peru"
+ PRU_fascism_DEF:0 "the Republic of Peru"
  PRU_communism:0 "Revolutionary Peru"
  PRU_communism_DEF:0 "Revolutionary Peru"
  PRU:0 "Peru"
