the Republic of China

--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -352,12 +352,10 @@
  QBC_fascism:0 "Québec"
  QBC_fascism_DEF:0 "Québec"
  QBC_fascism_ADJ:0 "Québecois"
- CHI_fascism:0 "China"
- CHI_fascism_DEF:0 "China"
+ CHI_fascism_DEF:0 "the Republic of China"
  CHI_democratic:0 "Republic of China"
  CHI_democratic_DEF:0 "the Republic of China"
- CHI_neutrality:0 "China"
- CHI_neutrality_DEF:0 "China"
+ CHI_neutrality_DEF:0 "the Republic of China"
  CHI_communism:0 "Chinese Socialist Republic"
  CHI_communism_DEF:0 "the Chinese Socialist Republic"
  CHI:0 "China"
