--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -1548,8 +1548,7 @@
  CHI_united_democratic_DEF:0 "the Republic of China"
  CHI_united_fascism:0 "Reorganized Nationalist China"
  CHI_united_fascism_DEF:0 "Reorganized Nationalist China"
- CHI_united_neutrality:0 "China"
- CHI_united_neutrality_DEF:0 "China"
+ CHI_united_neutrality_DEF:0 "the Republic of China"
  CHI_united_communism:0 "People's Republic of China"
  CHI_united_communism_DEF:0 "the People's Republic of China"
  CHL_autonomy_dominion:0 "Dominion of Chile"
