Cyprus flags and stuff

--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -43,6 +43,14 @@
  USA_UK_autonomy_colony_DEF:0 "the 48 Colonies"
  USA_UK_autonomy_puppet_DEF:0 "the $OVERLORDADJ$ North American Territories"
  USA_UK_autonomy_integrated_puppet_DEF:0 "King George's Land"
+ CYP_UK_autonomy_dominion:0 "Dominion of Cyprus"
+ CYP_UK_autonomy_colony:1 "Governorate of Cyprus"
+ CYP_UK_autonomy_puppet:0 "Protectorate of Cyprus"
+ CYP_UK_autonomy_integrated_puppet:0 "$OVERLORDADJ$ Cyprus"
+ CYP_UK_autonomy_dominion_DEF:0 "the Dominion of Cyprus"
+ CYP_UK_autonomy_colony_DEF:1 "the Governorate of Cyprus"
+ CYP_UK_autonomy_puppet_DEF:0 "the Protectorate of Cyprus"
+ CYP_UK_autonomy_integrated_puppet_DEF:0 "$OVERLORDADJ$ Cyprus"
  UKR_SOV_communism:1 "Ukrainian Soviet Republic"
  UKR_SOV_communism_DEF:1 "the Ukrainian Soviet Republic"
  BLR_SOV_communism_autonomy_puppet:1 "SSR of Belarus"
