Fix and tweak Chinese

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -1885,6 +1885,7 @@
  CHI_KMT_attack_GZC:0 "Western Expedition"
  CHI_ZHE_attack_FNG:0 "Take Nanjing"
  CHI_ZHE_attack_FNG_desc:0 "The hegemony of Zhili crumbled, and Fengtian threatens. The only recourse is to take Nanjing and claim our own sphere in the south."
+ CHI_sell_some_railroad_bruh:0 "Sell Railroad Concession of [FROM.GetName]"
 
 
  TUR_OPDA_CURRENCY_TOOLTIP:0 "§o                            Exchange Rates                      §!\n§d-----------------------------------------------------------------§!\n§Y3%§! §vConsumer Goods Factories factor =§! §Y0.295 Thousand Liras§!\n§d----------------------------------------------------------------§!"
