--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -949,8 +949,8 @@
  CHI_rule_of_the_beiyang_army_desc:0 "The people clamour to dangerous new political parties who claim to bring freedom and liberation. They only seek to prevent China from restoring its past glory! The Beiyang Army shall rule the new Republic to ensure our goals are met."
  CHI_unite_opposition:0 "Oppositions United"
  CHI_unite_opposition_desc:0 "As support grows for the Republic, opposition movements grow discontent with us. While undesirable, some of their proposals and reforms could suit the Republic well. Alligning them with our own interests by utilizing some of these suggestions will surely lead to prosperity."
- CHI_fight_against_militarists:0 "Fight against Separatists"
- CHI_fight_against_militarists_desc:0 "The militarists are threatening the future of the Republic, and must be dealt with."
+ CHI_focus_democratic_presidential_election:0 "Democratic Presidential Election"
+ CHI_focus_democratic_presidential_election_desc:0 "We shall decide the future of the Republic, and it must be done by the people's hand."
  CHI_militia_reorganization:0 "Militia Reorganization"
  CHI_militia_reorganization_desc:0 "The Chinese militias are disorganized. To combat this, we shall incorporate them into the army and train them to become effective combat units."
  CHI_economic_stabilization:0 "Economic Stabilization"
@@ -1159,7 +1159,7 @@
  CHI_bribe_northern_governors_desc:0 ""
  CHI_contact_yan_xishan:0 "Contanct Yan Xishan"
  CHI_contact_yan_xishan_desc:0 ""
- CHI_contact_yan_xishan_tt:0 "\n§Y10 Divisions§! will deployed in Shanxi in case of civil war."
+ CHI_contact_yan_xishan_tt:0 "\n§Y4 Divisions§! will deployed in Shanxi in case of civil war."
  CHI_capital_is_nanking:0 "Capital Is Nanking"
  CHI_capital_is_nanking_desc:0 ""
  CHI_national_revolution_army:0 "National Revolutionary Army"
