--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5408,15 +5408,15 @@ ROM_concessions_to_muslim_romanians_desc:0 ""
 ROM_dreams_of_a_great_romania:0 "Dreams of a Greater Romania"
 ROM_dreams_of_a_great_romania_desc:0 "There is a lot of land currently controlled by other countries that should really belong to us. If we wish to reclaim it, we will need to bolster our military as well as our foreign relations with countries who may server our interests in claiming land from our neighbors."
 ROM_negotiations_for_bukovina:0 "Negotiations for Bukovina"
-ROM_negotiations_for_bukovina_desc:0 ""
+ROM_negotiations_for_bukovina_desc:0 "The Austro-Hungarians know as well as we do what another front would mean for them, what it would mean for the Russians. The question is if they are willing to the pay the price for our entrance into the war. Transylvania is out of the question, but Bukovina can certaintly be discussed... "
 ROM_support_from_germany:0 "Krupp Weapons"
 ROM_support_from_germany_desc:0 "The German company Krupp has been a reliant supplier of guns for the Romanian army for a long time now. Let's increase orders from them to help expand our military."
 ROM_french_industrial_support:0 "French Industrial Support"
 ROM_french_industrial_support_desc:0 "France has one of the strongest economies in the world, and there's much we can learn from them. Let's invite a few of their industrial experts to Romania to help improve the productivity of our economy."
 ROM_increase_french_weapon_purchases:0 "Increase French Weapon Purchases"
-ROM_increase_french_weapon_purchases_desc:0 ""
+ROM_increase_french_weapon_purchases_desc:0 "The current amount of military support we recieve from the French juggernaut is much appreciated, yet we Romanians have never been known for our modesty. It's high time we contact them again and see if more aid can be negotiatied."
 ROM_welcome_anglo_italian_banks:0 "Welcome Anglo-Italian Banks"
-ROM_welcome_anglo_italian_banks_desc:0 ""
+ROM_welcome_anglo_italian_banks_desc:0 "The globe-spanning capitalist empire that Britain maintains is quite the impressive sight. What keeps it all running smoothly, though, are the banks. Inviting a few to do business would be wonderful for creating a strong economic model like the British have."
 ROM_center_consensus:0 "The Consensus of The Center"
 ROM_center_consensus_desc:0 "Partisan bickering between the PNL and the PC has hurt Romania greatly. The PND were appointed by the king for a reason: to bring a uniting, moderate government into power that the majority of Romanians can get behind."
 ROM_reach_out_to_the_industrialists:0 "Reach Out to the Industrialists"
@@ -5425,13 +5425,13 @@ ROM_arfocus:0 "We will eventually be able to core §YNorthern Dobruja§! through
 ROM_romanian_army:0 "The Coming Storm"
 ROM_revanchism:0 "Revanchism"
 ROM_romanian_army_desc:0 "Our army is currently using oudated tactics and equipment. With tensions rising in Europe, we may have an opprotunity to finally claim our rightful territories beyond our current borders. To ensure we are ready for this, we'll need to modernize the army"
-ROM_lessons_from_prussian:0 "Lessons from the Prussians"
-ROM_lessons_from_prussian_desc:0 ""
+ROM_lessons_from_prussian:0 "Prussian Militarism's Teachings"
+ROM_lessons_from_prussian_desc:0 "We have much to learn if we are to create a military capable of taking back our homelands. Why not learn from those who already have? A warrior ethos would make us undefeatable in spirit and in battle."
 ROM_french_russian_attache:0 "Franco-Russian Attaché"
-ROM_french_russian_attache_desc:0 ""
+ROM_french_russian_attache_desc:0 "The Franco-Russian alliance sits right on our border thanks to our border with Russian Bessarabia. This provides a wonderful opportunity for a Russian officer to increase the efficiency of our armed forces and perhaps even engage in exercises with their military."
 ROM_lessons_from_balkan_wars:0 "Lessons from the Balkan Wars"
 ROM_lessons_from_balkan_wars_tt:0 "One of the following must be true:\n   Has had a war with §Y[BUL.GetFlag][BUL.GetName]§!\n   Has had a war with §Y[TUR.GetFlag][TUR.GetName]§!\n   Has had a war with §Y[SER.GetFlag][SER.GetName]§!\n   Has had a war with §Y[MNT.GetFlag][MNT.GetName]§!\n   Has had a war with §Y[GRE.GetFlag][GRE.GetName]§!"
-ROM_lessons_from_balkan_wars_desc:0 "" 
+ROM_lessons_from_balkan_wars_desc:0 "For every victory and every defeat in the lands to our south we have learned a hard lesson about fighting wars. These lessons now drive the strategies our nation now uses. Yet no matter how deadly the wars we have just fought were, the revolver aimed at the head of Europe will eventually fire, and that war will be the deadliest of them all." 
 ROM_adapt_to_the_times:0 "Adapt to the Times"
 ROM_adapt_to_the_times_desc:0 ""
 ROM_to_the_trenches_you_go:0 "To the Trenches you Go"
@@ -5491,9 +5491,9 @@ ROM_invest_in_romania_steel_industry_desc:0 ""
 ROM_romania_for_those_who_deserve_it:0 "Romania For Those Who Deserve it"
 ROM_romania_for_those_who_deserve_it_desc:0 ""
 ROM_military_cooperation_with_austria:0  "Military Cooperation with Austria-Hungary"
-ROM_military_cooperation_with_austria_desc:0 ""
+ROM_military_cooperation_with_austria_desc:0 "Despite their oppressions of Transylvanian Romanians it would prove fruitful to seek military cooperation with the Austrians. Their time may come, or it may not, but no matter the outcome of future relations it would be prudent to extract as much benefit as we can from our current relationship."
 ROM_krupp_weapon_purchases:0 "Krupp Weapon Purchases"
-ROM_krupp_weapon_purchases_desc:0 ""
+ROM_krupp_weapon_purchases_desc:0 "Krupp has a reputation for providing countries an edge over their foes that no other weapons manufacturer can match. The strongest of examples would be Prussia utilizing their rifles in order to secure total victory over their opponents in the wars to unify Germany. Our current goals are not to dissimilar to what Prussia's were, so whose to say the same solution wouldn't work for us?"
 ROM_crush_the_protesters:0 "Declare a State of Emergency"
 ROM_crush_the_protesters_desc:0 ""
 ROM_the_unholy_alliance:0 "The Unholy Alliance"
