Pre-War military tree done!

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5162,6 +5162,9 @@ ww1_romania.55.a:0 "This is an outrage! Condemn them"
 ww1_romania.55.b:0 "Lets act rationally here..."
 you_are_now_happy:0 "You are now §GHappy§!"
 ROM_advancements_in_plane_technology:0 "Commission Military Aircraft"
+ROM_advancements_in_plane_technology_desc:0 "The future of war lies in the sky, far from the artillery and rifles of the ground. It is our intention to join that future and begin the construction of a competent air force the likes of which rival any enemy."
+ROM_domestic_air_manufactor:0 "Cerchez and Co"
+ROM_domestic_air_manufactor_desc:0 "Domestic production allows us to fulfill the exact needs of our military. We should turn to Cerchez and Co, a Romanian airplane manufacturer in danger of bankruptcy. If the government buoys them we might just be able to build ourself an airforce all by our lonesome."
 ROM_sec:0 "Modify §YRomanian Army§! by\n£organization_gain_texticon Army Organization Regain: §G+5.00%§!\n£attacker_speed_texticon Division Speed: §G+5.00%§!"
 ROM_the_southern_wall:0 "The Southern Wall"
 ROM_stragetic_fortifications_on_the_southern_border:0 "Fortify Key Cities on the Bulgarian Border"
@@ -5424,7 +5427,7 @@ ROM_reach_out_to_the_industrialists_desc:0 ""
 ROM_arfocus:0 "We will eventually be able to core §YNorthern Dobruja§! through this decision."
 ROM_romanian_army:0 "The Coming Storm"
 ROM_revanchism:0 "Revanchism"
-ROM_romanian_army_desc:0 "Our army is currently using oudated tactics and equipment. With tensions rising in Europe, we may have an opprotunity to finally claim our rightful territories beyond our current borders. To ensure we are ready for this, we'll need to modernize the army"
+ROM_romanian_army_desc:0 "War is on the horizon, and our general staff doesn't believe we are ready for it. Any day now Europe could clash, and we intend to extract the benefits from either siding with the French or the Germans. The question now though is who we should go to for military cooperation?"
 ROM_lessons_from_prussian:0 "Prussian Militarism's Teachings"
 ROM_lessons_from_prussian_desc:0 "We have much to learn if we are to create a military capable of taking back our homelands. Why not learn from those who already have? A warrior ethos would make us undefeatable in spirit and in battle."
 ROM_french_russian_attache:0 "Franco-Russian Attaché"
@@ -5520,7 +5523,9 @@ ROM_great_egoism:0 "Great Egoism"
 ROM_accept_the_call_to_war:0 "Accept The Call To War"
 ROM_anti_russianism:0 "Anti-Russianism"
 ROM_recruitment_campaigns:0 "We Need You!"
+ROM_recruitment_campaigns_desc:0 "If Romania are to win the battles our country is almost assuredly going to face, we need more men. The time has come to call upon the patriotism in every young Romanian to serve their country."
 ROM_embrace_revanchism:0 "Embrace Revanchism"
+ROM_embrace_revanchism_desc:0 ""
 ROM_recruitment_campaign:0 "Recruitment Campaign"
 ROM_german_support:0 "German Support"
 ROM_romanian_claims:0 "Romanian Claims"
@@ -5577,7 +5582,7 @@ ROM_transition_towards_a_socialist_economy:0 "Transition to a Socialist Economy"
 ROM_alliance_with_the_pdsr:0 "Alliance with the PDSR"
 ROM_invite_french_socialists:0 "Invite French Socialists"
 ROM_restructure_our_logistics:0 "Improve Supply Logistics"
-ROM_restructure_our_logistics_desc:0 "With Romania's needs of armed forces expanding, it has become evident that our current logistics network is insufficient. By modernizing our supply routes and infrastructure, we can ensure that vital resources reach the front lines more efficiently, strengthening our strategic capabilities and preparing our nation for future challenges."
+ROM_restructure_our_logistics_desc:0 "With the needs of the armed forces expanding, it has become evident that our current logistics network is insufficient. By modernizing our supply routes we can ensure that vital resources reach the front lines more efficiently, strengthen our strategic capabilities and preparing our nation for future challenges."
 ROM_slow_and_steady_wins_the_race:0 "Slow and Steady Wins the Race"
 ROM_social_welfare:0 "Social Welfare"
 ROM_new_times:0 "New Times"
