King's Government foci done

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5008,6 +5008,7 @@ ww1_romania.77.a:0 "On second thought, lets review our previous options"
 ROM_south_wall.tt:0 "Add §G1§! §YLand Fort§! on every tile bordering [BUL.GetFlag] §YBulgaria§!"
 ROM_strat_forts.tt:0 "Add §G3§! §YLand Fort§! on the cities of §YCaracal§!, §YAlexandria§!, §YCalarasi§!, and §YConstanta§!"
 ROM_restore_civilian_control:0 "Hold New Snap Elections"
+ROM_restore_civilian_control_desc:0 "Running a country is tough work. King Carol in all of his grace has decided to allow democracy again, for a time. They must work carefully and diligently if they want to keep that power."
 ww1_romania.18.c:0 "Lets appoint someone from the PC"
 ww1_romania.20.t:0 "The Left Boycotts Election for Bucharest Council"
 ww1_romania.20.d:0 "As a way to protest the new conservative government, the PNL and some in the PCD have decided they will be boycotting the elections for Bucharest Council. By showing low turnout will end up being, they hope to prove that the people do not actually support the conservatives. They're free to do this, as it will just ensure we win the election. The conservatives are divided however, in many different factions. While the king appointed Carps faction of the conservatives in power as Prime Minister, the people will have to pick which conservative faction wins this one.\n\nOne of the canidates aligns with Carps more elitist, authoritarian group of conservatives. They believe vast reforms arn't needed for Romania, and that parliament has been given much more power then it really should have. The other canidate comes from the anti Carp faction of the conservatives. Generally younger, and more centrist, they believe Carp holds a threat to Romanian democracy and want greater reforms to Romanias economy."
@@ -5203,8 +5204,10 @@ ROM_junimea_ideas:0 "Junimean Ideas"
 ROM_geniocracy:0 "A Government of Intellectuals"
 ROM_geniocracy_desc:0 ""
 ROM_install_a_royal_dictatorship:0 "The Kings Government"
+ROM_install_a_royal_dictatorship_desc:0 "The time for limited parliamentarianism in Romania has ended. King Carol and his advisors have assumed the vessels of government from the political parties, finally through with their squabbling. What this means for Romania is anyone's guess."
 ROM_pragmatic_politics:0 "Reunion of the Conservative Parties"
 ROM_the_second_great_disaster:0 "The Second Great Disaster"
+ROM_the_second_great_disaster_desc:0 "A second peasant's revolt has befell our nation, with just as much significance as the last. The King is furious with parliament to the degree where he may just dismiss the current government and not summon another one."
 ROM_fuse_nationalism_and_literacy:0 "Fuse Nationalism and Literacy"
 ROM_new_elitism:0 "New Elitism"
 ROM_new_elitism_desc:0 ""
@@ -5256,7 +5259,7 @@ ROM_develop_the_north_desc:0 "The south is the most developed part of Romania, w
 ROM_prahova_valley:0 "Expand the Prahova Valley"
 ROM_prahova_valley_desc:0 "The Prahovan Valley region is where the bulk of Romanias industry lays. We must continue the development of our industry to neighboring areas of the Prahovan Valley for our continued economic development."
 ROM_his_majestys_influence:0 "His Majesty's Influence"
-ROM_his_majestys_influence_desc:0 ""
+ROM_his_majestys_influence_desc:0 "While Romania does have a parliament, King Carol holds much influence over it, and his whims and displeasure guides the majority of its activity. He is a strong monarch in all regards."
 ROM_crush_left_wing_protesters:0 "End the Liberal Boycott"
 ROM_crush_left_wing_protesters_desc:0 "Many in the left are refusing to engage with Carps new government. While we'd usually be fine with these retards fucking off, we're gonna need them to get on board for now. Through some shady manuevers, we should be able to put an end to this boycott."
 ROM_law_on_mobilization:0 "Law On Mobilization"
@@ -5382,7 +5385,7 @@ ROM_a_unifying_figure_head_desc:0 ""
  ww1_romania.56.d:0 "The PNL has long had internal divisions, mainly between those who disagree on just how far reform needs to go. Constantin Stere has long been a proponent of an extensive commitee on land reform, full male suffrage, a new constitution, and has even flirted with the idea of giving Women the right to vote as well. On the contrary, Ion Bratianu, the current leader of the PNL, has given lip service to these issues at best. With a new PNL government recently being installed, a battle of power began behind the scenes.\n\nIt seems that Stere has won this conflict, as today the PNL forced Bratianu to stand down in favor of Stere at risk of a party splinter. With this, the King has accepted Bratianu's resignation and Stere will now have to see if he can live up to his promises."
  ww1_romania.56.a:0 "Let's get action!"
 ROM_the_house_always_wins:0 "The House Always Wins"
-ROM_the_house_always_wins_desc:0 ""
+ROM_the_house_always_wins_desc:0 "The King has decided that the charade of constantly shifting parties will end, as he is now backing the PCD entirely. With our mandate secured, now is the time to make moves that we couldn't do beforehand."
 ROM_mandatory_insurance:0 "Mandatory Insurance"
 ROM_mandatory_insurance_desc:0 "Many urban Romanians work in unsafe conditions without any compensations for their employers negligence that may lead to them being injured. We must put an end to this exploitative practice, and mandate employers give insurance to their workers."
 ROM_social_conservative_principal:0 "Social Conservative Principal"
@@ -5399,9 +5402,9 @@ ROM_bratianu_resign:0 "Brătianu's Resignation"
 ROM_bratianu_resign_desc:0 "The failure of the PNL to pass the most recent land reform bill has proven to the king that the liberals have governed for long enough, and that its time for another party to bring a fresh face to governance. Lets have Bratianu resign, and have the conservative PC form a government."
 on_select_ROM_our_duty_to_the_people:0 "On selection of this focus:\nGets event '§YThe Brătianu Land Reform Bill - Debate Begins§!'\nWe will have to deal with a variety of groups attempting to §Cinfluence§! the bill. If the bill passes, we will gain:\nModify §YUnfinished Land Reform§! by\nConsumer Goods Factories factor: §Y-5.0%§!\nMax Factories in a State: §G+5%§!\nPolitical Power Gain: §G+0.10§!"
 ROM_king_carols_reign:0 "King Carol's Reign"
-ROM_king_carols_reign_desc:0 "The founding father of the modern Romanian state, King Carol, has lead us well so far. With his great wisdom, Romania has gone from a rump puppet state of the Ottoman Turks to a strong and independent nation. With his guiding hand, Romania will continue to propser in the 20th century!"
+ROM_king_carols_reign_desc:0 "While being a German himself, many consider King Carol the founding father of the Romanian state, and a Romanian in his own right. Under his rule we obtained independence from the Ottomans and are developing into a regional power! Long may he reign!"
 ROM_our_duty_to_the_people:0 "Our Duty to the People"
-ROM_our_duty_to_the_people_desc:0 "The biggest issue of today is undoubtedly land reform. We are slowly but surely making progress on the issue, but unfortunately it may be too slowly for the people. To continue progress, we should draft a major land reform bill."
+ROM_our_duty_to_the_people_desc:0 "The people clamor for land reform, and the King has indicated that it is his will as well. The Parliament has gathered to work on negotating such a bill. Hopefully things go the right way."
 ROM_law_on_southern_dobruja:0 "Law on Southern Dobruja"
 ROM_law_on_southern_dobruja_desc:0 ""
 ROM_encourage_romanian_migration_dobruja:0 "Encourage Romanian Migration to Dobruja"
@@ -5616,15 +5619,20 @@ ROM_grand_coalition:0 "Grand Coalition"
 ROM_support_romanian_literature:0 "Support Romanian Literature"
 ROM_fight_illiteracy:0 "Fight Illiteracy"
 ROM_secure_the_countryside:0 "Secure the Countryside"
+ROM_secure_the_countryside_desc:0 "The power of government lies in the support of the people. If we are to secure our government we must secure the support of the people recently upended by parliament. That may involve purging corrupt government officials, but we aren't unwilling to go down that route."
 ROM_prussian_values:0 "Prussian Values"
+ROM_prussian_values:0 "It is no secret that our king is a Hohenzollern, but for the entirety of his reign he has adopted the values instilled by his Romanian parliament. It may be time to import the values his forefathers held dear to ensure our continual political evolution."
 ROM_recover_from_defeat:0 "Recover from Defeat"
 ROM_victory_in_the_great_war:0 "Begin Demobilization"
 ww1_romania.68.t:0 "The War has Ended!"
 ww1_romania.68.desc:0 "The Great War has affected Romania's economy badly, inflation is off the roofs and we have debts to pay and reperations to complete. We need to fix this problem immediately."
 ww1_romania.68.a:0 "There is more?!"
 ROM_discipline_the_army:0 "Discipline the Army"
-ROM_depoliticize_the_regime:0 "Depoliticize the Regime"
+ROM_discipline_the_army:0 "Our Prussian King has decided to take the next step in shaping the country around his ideals. The army has been ordered to drill with assistance from German officers, and the results are looking promising."
+ROM_tighten_our_grip:0 "Tighten Our Grip"
+ROM_tighten_our_grip_desc:0 "King Carol have made heavy strides in his new form of governance, with these strides indicating positive results. There are steps that could be taken to further entrench our regime, the only obstacle to those steps are the King's word."
 ROM_expanding_our_majority_in_parliament:0 "Expand our Majority in Parliament"
+ROM_expanding_our_majority_in_parliament_desc:0 "The success of the party in head of government has made ripples in Romanian society. Any election called now would surely result in a landslide for their candidates. Perhaps that is exactly the move to make."
 ROM_this_will_have_better_effects_after_tt:0 "§RThis national spirit will give better effects after it expires.§R§W"
 empty_space_tt:0 " \n"
 ROM_enforce_fiscal_sustainability:0 "Enforce Fiscal Sustainability"
@@ -5691,7 +5699,7 @@ ww1_romania.74.a:0 "What will the people say?"
 
 #custom tooltips
 ROM_the_kings_government:0 "The King's Favorites"
-ROM_the_kings_government_desc:0 "The failure of PC and PNL to govern the country in recent years has forced our hand. With the current government dismissed, we shall task the moderates of the PCD to form a new government. This sensible coalition should hopefully govern the country carefully in the coming times."
+ROM_the_kings_government_desc:0 "King Carol has grown tired of the bickering between the PC and the PNL, bickering that threatens to halt Romania's rise to power. As such he has tasked the moderate PCD with forming a government more to his liking."
 ROM_romanian_army_idea:0 "Romanian Army"
 ROM_invite_fredrick_wilhelm.tt:0 "§YFriedrich William§! will be crowned as king of Romania"
 ROM_attract_war_industry:0 "Modify §YRomanian Army§! by\n£factory_output_texticon Factory Output: §G+7.00%§!"
