fixed an oopsie

--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5621,7 +5621,7 @@ ROM_fight_illiteracy:0 "Fight Illiteracy"
 ROM_secure_the_countryside:0 "Secure the Countryside"
 ROM_secure_the_countryside_desc:0 "The power of government lies in the support of the people. If we are to secure our government we must secure the support of the people recently upended by parliament. That may involve purging corrupt government officials, but we aren't unwilling to go down that route."
 ROM_prussian_values:0 "Prussian Values"
-ROM_prussian_values:0 "It is no secret that our king is a Hohenzollern, but for the entirety of his reign he has adopted the values instilled by his Romanian parliament. It may be time to import the values his forefathers held dear to ensure our continual political evolution."
+ROM_prussian_values_desc:0 "It is no secret that our king is a Hohenzollern, but for the entirety of his reign he has adopted the values instilled by his Romanian parliament. It may be time to import the values his forefathers held dear to ensure our continual political evolution."
 ROM_recover_from_defeat:0 "Recover from Defeat"
 ROM_victory_in_the_great_war:0 "Begin Demobilization"
 ww1_romania.68.t:0 "The War has Ended!"
