--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5574,6 +5574,7 @@ ROM_poporanist:0 "Poporanism"
 conservative_coalition:0 "Conservative Coalition"
 ww1_romania.67.t:0 "Fusion of the PC and PCD"
 ROM_kick_pnl_from_coalition:0 "Sideline the PNL"
+ROM_kick_pnl_from_coalition:0 "A permanent government means the need to entertain the whims of parties that do not serve the King's interests are irrelevant, the PNL being a principle example of this. A pure coalition shall be established, with one purpose and one purpose only. No longer will we be bureaucratically bogged down."
 ww1_romania.67.d:0 "With a complete dominance in Romanian politics as it stands, the PCD has lots of leverage against the PC, now struggling to find a voter base. With this, Take Ionsecu has organized a meeting with several top PC officals to discuss a political merge. With little other choice, PC leaders have agreed to join the PCD and form a broad center right party."
 ww1_romania.67.a:0 "This will expand our mandate greatly!"
 ROM_expansion_of_the_middle_class:0 "Expand the Middle Class"
@@ -5608,7 +5609,7 @@ ww1_romania.66.desc:0 "Romania's cultural scene is thriving, with its young tale
 ww1_romania.66.a:0 "They are all making Romania proud."
 ROM_alexandru_c_cuza:0 "Alexandru Constantin Cuza"
 ROM_reduce_trade_barriers_with_germany:0 "Reduce Trade Barriers with Germany"
-ROM_reduce_trade_barriers_with_germany_desc:0 ""
+ROM_reduce_trade_barriers_with_germany_desc:0 "The previous civilian government was hesitant to engage in broader trade with Germany. This was a mistake and it has cost us great growth. Now though, now we can make amends for this and lower tariffs to incentivize German investment. Our populace may disagree, but this is the best course for Romania."
 ROM_de_politicize_key_cabinet_positions:0 "Depoliticize Key Cabinet Positions"
 ROM_de_politicize_key_cabinet_positions_desc:0 ""
 this_wont_do_anything_if_completed_jewish_focus_tt:0 "§RThis focus will not have any effects if §R§YExodus to Romania§Y§R or §R§YSafe Haven for Jews§Y§R are completed.§R§W"
@@ -5617,6 +5618,7 @@ ROM_end_antisemitism:0 "Address our Past"
 ROM_end_antisemitism_desc:0 ""
 ROM_grand_coalition:0 "Grand Coalition"
 ROM_support_romanian_literature:0 "Support Romanian Literature"
+ROM_support_romanian_literature:0 "Romanian writing is an untapped goldmine. The novelists and poets that sit impoverished in Bucharest apartments need a helping hand, as their writings are worth more than any money we could provide them. The time for a cultural revival is nigh, and the artists of our nation will light the way."
 ROM_fight_illiteracy:0 "Fight Illiteracy"
 ROM_secure_the_countryside:0 "Secure the Countryside"
 ROM_secure_the_countryside_desc:0 "The power of government lies in the support of the people. If we are to secure our government we must secure the support of the people recently upended by parliament. That may involve purging corrupt government officials, but we aren't unwilling to go down that route."
