Revert "Update ww1_decisions_l_english.yml"
This reverts commit 45e143f894cea40049238ef252d28a9f28d1322f.

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -468,6 +468,16 @@ FRA_war_on_hainan_flag:0 "Is Planning to Invade Hainan"
 FRA_start_intervention_in_china:0 "Start Intervention in China"
 FRA_target_of_france:0 "Original Owner of Hainan"
 
+#Bulgaria
+
+BUL_arms_purchases:0 "Arms Purchases"
+purchase_austrian_rifles:0 "Purchase Austrian Rifles"
+BUL_purchase_german_rifles:0 "Purchase German Rifles"
+BUL_purchase_russian_rifles:0 "Purchase Russian Rifles"
+BUL_purchase_french_rifles:0 "Purchase French Rifles"
+BUL_sue_for_peace_ROM:0 "Surrendur to Romania"
+BUL_sue_for_peace_TUR:0 "Surrendur to the Ottomans'
+
 #Balkan League
 
 balkan_league_dec:0 "Balkan League"
